--- a/current_stu/templates/current_stu/student_form.html
+++ b/current_stu/templates/current_stu/student_form.html
@@ -18,26 +18,30 @@
         {{ form3.as_p }}
         {{ form4.as_p }}
         {{ form5.as_p }}
-        {{ form6.as_table }}
-        {{ testform.as_p }}
+        {{ form6.as_p }}
+        {{ form7.as_p }}
+        {{ form8.as_p }}
+        {{ form9.as_p }}
+        {{ form10.as_p }}
+        {{ form11.as_p }}
 
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
-<div class="form-group row">
-  <label for="example-text-input" class="col-xs-2 col-form-label">Text</label>
-  <div class="col-xs-10">
-    <input class="form-control" type="text" value="Artisanal kale" id="example-text-input">
-  </div>
-</div>
-<div class="form-group row">
-  <label for="example-search-input" class="col-xs-2 col-form-label">Search</label>
-  <div class="col-xs-10">
-    <input class="form-control" type="search" value="How do I shoot web" id="example-search-input">
-  </div>
-</div>
-<div class="form-group row">
-  <label for="example-email-input" class="col-xs-2 col-form-label">Email</label>
-  <div class="col-xs-10">
-    <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
-  </div>
-</div>
+<!--<div class="form-group row">-->
+  <!--<label for="example-text-input" class="col-xs-2 col-form-label">Text</label>-->
+  <!--<div class="col-xs-10">-->
+    <!--<input class="form-control" type="text" value="Artisanal kale" id="example-text-input">-->
+  <!--</div>-->
+<!--</div>-->
+<!--<div class="form-group row">-->
+  <!--<label for="example-search-input" class="col-xs-2 col-form-label">Search</label>-->
+  <!--<div class="col-xs-10">-->
+    <!--<input class="form-control" type="search" value="How do I shoot web" id="example-search-input">-->
+  <!--</div>-->
+<!--</div>-->
+<!--<div class="form-group row">-->
+  <!--<label for="example-email-input" class="col-xs-2 col-form-label">Email</label>-->
+  <!--<div class="col-xs-10">-->
+    <!--<input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">-->
+  <!--</div>-->
+<!--</div>-->
