--- a/potential_stu/templates/potential_stu/student_detail.html
+++ b/potential_stu/templates/potential_stu/student_detail.html
@@ -4,4 +4,5 @@
         <p>{{ student.dob }}</p>
         <p>{{ student.dob }}</p>
         <p>{{ student.agent }}</p>
+       {{student.id}}
     </div>
