--- a/current_stu/templates/current_stu/student_list.html
+++ b/current_stu/templates/current_stu/student_list.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Potential Student List</h1>
 <a href="{% url 'new_stu' %}">New</a>
 <ul>
@@ -10,4 +12,4 @@
     </li>
     {% endfor %}
 </ul>
-
+{% endblock %}
