--- a/potential_stu/templates/potential_stu/student_list.html
+++ b/potential_stu/templates/potential_stu/student_list.html
@@ -1,14 +1,35 @@
+{% extends "base.html" %}
+{% block content %}
 <h1>Potential Student List</h1>
 <a href="{% url 'new_potential_stu' %}">New</a>
-<ul>
+
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Gender</th>
+        <th>Date of Birth</th>
+        <th>E-mail</th>
+        <th>Options</th>
+      </tr>
+    </thead>
     {% for student in student_list %}
-    <li>
-        {{ student.name }}
-        {{ student.dob }}
-        <a href="{% url 'update_potential_stu' student.id %}">edit</a>
-        <a href="{% url 'delete_potential_stu' student.id %}">delete</a>
-        <a href="{% url 'detail_potential_stu' student.id %}">detail</a>
-    </li>
+    <tbody>
+      <tr>
+        <th>{{ student.name }}</th>
+        <th>{{ student.gender }}</th>
+        <th>{{ student.dob }}</th>
+        <th>{{ student.email }}</th>
+
+        <div class="button-wrapper">
+            <th><a class="btn btn-primary" href="{% url 'detail_potential_stu' student.id %}">Detail</a></th>
+            <th><a class="btn btn-info" href="{% url 'update_potential_stu' student.id %}">Edit</a></th>
+            <th><a class="btn btn-danger" href="{% url 'delete_potential_stu' student.id %}">Delete</a></th>
+        </div>
+      </tr>
+    </tbody>
     {% endfor %}
-</ul>
+ </table>
+
+{% endblock %}
 
