--- a/potential_stu/templates/potential_stu/student_list.html
+++ b/potential_stu/templates/potential_stu/student_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Potential Student List</h1>
-<a href="{% url 'new_potential_stu' %}">New</a>
+<a class="btn btn-primary" href="{% url 'new_potential_stu' %}">Create New Student</a>
 
 <table class="table table-hover">
     <thead>
