--- a/current_stu/templates/current_stu/student_form.html
+++ b/current_stu/templates/current_stu/student_form.html
@@ -1,32 +1,39 @@
 
-<!DOCTYPE html>
-{% load bootstrap3 %}
-<!--<html lang="en">-->
-<!--<head>-->
-  <!--<title>Bootstrap Example</title>-->
-  <!--<meta charset="utf-8">-->
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-<!--</head>-->
-<h1>New post</h1>
-    <form method="POST" role="form">
-        {% csrf_token %}
-        {% bootstrap_form form1 %}
-        {{ form2.as_p }}
-        {{ form3.as_p }}
-        {{ form4.as_p }}
-        {{ form5.as_p }}
-        {{ form6.as_p }}
-        {{ form7.as_p }}
-        {{ form8.as_p }}
-        {{ form9.as_p }}
-        {{ form10.as_p }}
-        {{ form11.as_p }}
+{% extends 'base.html' %}
 
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_messages %}
+
+
+{% block content %}
+
+<div class="col-md-6 col-md-offset-3">
+    <h1>Create/Edit Current Student</h1>
+        <form method="POST" role="form">
+            {% csrf_token %}
+            {% bootstrap_form form1 %}
+            {% bootstrap_form form2 %}
+            {% bootstrap_form form3 %}
+            {% bootstrap_form form4 %}
+            {% bootstrap_form form5 %}
+            {% bootstrap_form form6 %}
+            {% bootstrap_form form7 %}
+            {% bootstrap_form form8 %}
+            {% bootstrap_form form9 %}
+            {% bootstrap_form form10 %}
+            {% bootstrap_form form11 %}
+
+            <div class="button">
+            {% buttons %}
+            <button type="submit" class="btn btn-primary">
+                {% bootstrap_icon "save" %} Save
+            </button>
+            {% endbuttons %}
+        </div>
+        </form>
+</div>
+{% endblock %}
 <!--<div class="form-group row">-->
   <!--<label for="example-text-input" class="col-xs-2 col-form-label">Text</label>-->
   <!--<div class="col-xs-10">-->
