--- a/potential_stu/templates/potential_stu/student_form.html
+++ b/potential_stu/templates/potential_stu/student_form.html
@@ -1,29 +1,33 @@
 
+{% extends 'base.html' %}
 
 {% load bootstrap3 %}
-
 {% bootstrap_css %}
-
 {% bootstrap_messages %}
-
-
-
 
 {% block content %}
 
-<h1>New Potential Student</h1>
+<style>
+    .container {
+    display:inline-block;
+}
+</style>
 
-<form method="POST" class="post-form">
-    {% csrf_token %}
-    {% bootstrap_form form1 %}
-    {% bootstrap_form form2 %}
-    <div class="button">
-        {% buttons %}
-        <button type="submit" class="btn btn-primary" dis>
-            {% bootstrap_icon "save" %} Save
-        </button>
-        {% endbuttons %}
+<div class="col-md-6 col-md-offset-3">
+    <h1>Create/Edit Potential Student</h1>
+    <div class="">
+    <form method="POST" class="post-form">
+        {% csrf_token %}
+        {% bootstrap_form form1 %}
+        {% bootstrap_form form2 %}
+        <div class="button">
+            {% buttons %}
+            <button type="submit" class="btn btn-primary">
+                {% bootstrap_icon "save" %} Save
+            </button>
+            {% endbuttons %}
+        </div>
+    </form>
     </div>
-</form>
-
+</div>
 {% endblock %}
