--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -36,7 +36,7 @@
 
           <ul class="nav navbar-nav">
               <!--class="active"-->
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
 
             <li><a href="{% url 'current_stu_list' %}">Current Student</a></li>
             <li><a href="{% url 'potential_stu_list' %}">Potential Student</a></li>
@@ -44,15 +44,15 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">More<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Page 1-1</a></li>
-                  <li><a href="#">Page 1-2</a></li>
-                  <li><a href="#">Page 1-3</a></li>
+                  <li><a href="{% url 'register' %}">Create User</a></li>
+                  <li><a href="#">BGE Website</a></li>
+                  <!--<li><a href="#">Page 1-3</a></li>-->
                 </ul>
             </li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
             <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
           </ul>
         </div>
@@ -64,8 +64,8 @@
       <div class="starter-template">
         {% block content %}
         {% endblock %}
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <!--<h1>Bootstrap starter template</h1>-->
+        <!--<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>-->
       </div>
 
     </div>
